% Links to vignettes 20220723
\newcommand{\viglink}{\ifelse{html}{\out{<a href="../CHNOSZ/doc/#1.html"><strong>#1.Rmd</strong></a>}}{\bold{#1.Rmd}}}
% Heat capacity and standard Gibbs energy 20231115
\newcommand{\Cp}{\ifelse{latex}{\eqn{C_P}}{\ifelse{html}{\out{<I>C<sub>P</sub></I>}}{Cp}}}
\newcommand{\DG0}{\ifelse{latex}{\eqn{{\Delta}G^{\circ}}}{\ifelse{html}{\out{&Delta;<I>G</I>&deg;}}{ΔG°}}}

\section{Changes in CHNOSZ version 2.1.0-15 (2024-05-22)}{

    \itemize{

      \item Move \code{read.fasta()}, \code{count.aa()}, and \code{aasum()} to canprot package with different names.

      \item Remove \code{seq2aa()}.

      \item Remove \code{add.alpha()}. Now \code{grDevices::adjustcolor()} is
      used in \code{stack_mosaic()} to add transparency.
      
      \item Add FAQ question: Why are mineral stability boundaries curved on mosaic diagrams?

      \item \code{check.EOS()} now uses values of Born coefficients \emph{X} and \emph{Q} that are consistent with either SUPCRT92 or DEW, depending on the \code{model} defined in OBIGT (HKF or DEW, respectively).

      \item Add aqueous uranyl complexes from \href{https://doi.org/10.1016/j.gca.2024.04.023}{Migdisov et al. (2024)} and related U-bearing minerals from \href{https://doi.org/10.1787/bf86a907-en}{Grenthe et al. (2020)}.

      \item Except for HUO\s{4}\S{-}, aqueous uranium species from \href{https://doi.org/10.1016/S0016-7037(97)00240-8}{Shock et al. (1997)} have been moved to \file{SLOP98.csv}.

      \item Remove \code{ispecies} from output of \code{check.OBIGT()} to avoid superfluous diffs.

      \item Move americium complexes from \file{slop98.dat} back to \file{inorganic_aq.csv} (entropy of the element Am has been available for checking GHS self-consistency since version 1.4.0).

      \item Add alkylamines, benzylamines, and aminiums from \href{https://doi.org/10.1016/j.gca.2024.03.013}{Robinson et al. (2024)}.

      \item \samp{OBIGT/inorganic_cr.csv}: Add cerianite (CeO\s{2}) and